# fiber_photometry_pipeline

./: .gitignore  FLAIR.py  FLAIR_README.md  README.md  analyze.py  config.yaml  pyproject.toml  requirements_gui.txt
.devcontainer/: devcontainer.json
fiber_photometry/: __init__.py  analysis.py  cli.py  normalization.py  parser.py  preprocessing.py  visualization.py
output/: Fiber_Photometry_Analysis_Report.html  REPORT.md  events.csv  metadata.json  plot_data.json  processing_log.json  transients.csv
tests/: __init__.py  test_normalization.py  test_parser.py  test_preprocessing.py
